fix tag overflow + text divided

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -274,7 +274,7 @@
     direction: rtl;
     letter-spacing: 0px;
     justify-content: right;
-    /*text-align: right !important;*/
+    text-align: right;
 }
 
 .highlight {
@@ -299,4 +299,14 @@ img.circle {
     max-width: 32%;
     margin: auto;
     padding-top: 10px;
+}
+
+.post-info {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.post-info > * {
+    display: flex;
+    flex-wrap: wrap;
 }
